[project]
name = "croustillantlistener"
version = "1.0.0"
description = "CROUStillant Listener, sends messages to Discord when a new restaurant is available."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "asyncpg>=0.30.0",
    "discord-py>=2.5.2",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
]
